// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brute force Array | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Array [],
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Boolean 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [],
    ],
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Boolean 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [
        1,
      ],
      Array [
        2,
      ],
    ],
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Array [],
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Object 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [],
    ],
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Object 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [
        1,
      ],
      Array [
        2,
      ],
    ],
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    true,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    true,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Function | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Function | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    NaN,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    NaN,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Null | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    null,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Null | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    null,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    3,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | Boolean 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    4,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    3,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | Object 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    4,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Boolean 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Boolean 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 2,
    },
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Object 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Object 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 2,
    },
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Promise | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Promise {},
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Promise | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Promise {},
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    /foo/,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Boolean 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    /bar/g,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    /foo/,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Object 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    /bar/g,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force String | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    "foo",
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force String | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    "foo",
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    undefined,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    undefined,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;
